--- a/examples/physicell_trsecretion_no_hublib_yes_myproj.ipynb
+++ b/examples/physicell_trsecretion_no_hublib_yes_myproj.ipynb
@@ -20,7 +20,7 @@
         "    os.system('git clone https://github.com/rheiland/trsecretion.git')\n",
         "\n",
         "# run\n",
-        "from tr_mechanics import run_on_colab\n",
+        "from trsecretion import run_on_colab\n",
         "gui = run_on_colab.go(home)\n",
         "gui"
       ]
