--- a/examples/physicell_trsecretion_no_hublib_yes_myproj.ipynb
+++ b/examples/physicell_trsecretion_no_hublib_yes_myproj.ipynb
@@ -8,6 +8,7 @@
       },
       "outputs": [],
       "source": [
+        "#@title PhysiCell secretion training app \n",
         "# library\n",
         "import os\n",
         "\n",
